# k3s-deploy

./: .gitattributes
helm-template/: qdrant-values-template.yaml
k3s-health-agent/: .dockerignore  .env  .gitignore  pyproject.toml  requirements.txt
k3s-health-agent/deployment/docker/: Dockerfile
k3s-health-agent/deployment/k8s/: deployment.yaml  postgres-deployment.yaml  qdrant-deployment.yaml  redis-deployment.yaml
k3s-health-agent/knowledge_base/best_practices/: .gitkeep
k3s-health-agent/knowledge_base/incidents/: .gitkeep
k3s-health-agent/knowledge_base/k8s_docs/: .gitkeep  pod_lifecycle.md  resource_management.md
k3s-health-agent/knowledge_base/solutions/: .gitkeep
k3s-health-agent/src/: __init__.py
k3s-health-agent/src/agent/: __init__.py  agent_core.py  memory.py  prompts.py  tools.py
k3s-health-agent/src/api/: knowledge_routes.py  main.py  routes.py
k3s-health-agent/src/collectors/: __init__.py  incident_collector.py  k3s_collector.py  log_collector.py  prometheus_collector.py
k3s-health-agent/src/database/: db.py  models.py
k3s-health-agent/src/rag/: __init__.py  knowledge_base.py  rag_engine.py
k3s-health-agent/src/test/: create_agent.py  test-k8s-api-server.py
k3s-health-agent/src/utils/: config.py  notifications.py
k3sinstall/: apisix-2.12.1.tgz  apisix_chart.yaml  deploy.conf  deploy_agent_k3s.sh  deploy_master_k3s.sh  deploy_slave_k3s.sh  download_k3s.sh  install_apisix_chart.sh  install_helm.sh  install_k3s_selinux.sh  k3s  k3s-airgap-images-amd64.tar.zst  k3s-selinux-1.6-1.el8.noarch.rpm  load_iptables_module.sh  (+3 more)
(+23 files in other folders)
